# django-ecommerce

./: README.md  pyproject.toml
apps/authentication/: apps.py  conf.py  helpers.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_initial.py
apps/order/: apps.py
apps/user/: app_settings.py  helpers.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_address_alter_user_options_remove_user_username_and_more.py  0003_emailverification_alter_address_options_and_more.py  0004_userverification_and_more.py
core/: asgi.py  settings.py  urls.py  wsgi.py
